force-app/main/default/objects/Lead/fields/AI_Reasoning__c.field-meta.xml
<CustomField>
    <fullName>AI_Reasoning__c</fullName>
    <description>Justification du score générée par SSR Recipe 10 (LLM ou règles).</description>
    <label>AI Reasoning</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>