force-app/main/default/objects/Lead/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <description>Confiance du scoring entre 0 et 1 (SSR Recipe 10). 0.4 en mode fallback règles.</description>
    <label>Confidence</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>