force-app/main/default/objects/Lead/fields/Disqualification_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_Reason__c</fullName>
    <description>Motif de disqualification renseigné par SSR Recipe 10 quand le score est sous le seuil bas.</description>
    <label>Disqualification Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>