force-app/main/default/objects/Lead/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Score de qualification (0-100) écrit par SSR Recipe 10 (LLM ou fallback règles).</description>
    <label>Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>