force-app/main/default/objects/Lead/fields/Scored_At__c.field-meta.xml
<CustomField>
    <fullName>Scored_At__c</fullName>
    <description>Horodatage du dernier scoring SSR Recipe 10.</description>
    <label>Scored At</label>
    <type>DateTime</type>
</CustomField>